<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ToolBarStyle" />

    <!-- RECYCLER VIEW CONTAINER -->
    <LinearLayout
        android:id="@+id/recyclerViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/messageContainer"
        android:layout_below="@id/toolbar">

        <!-- MESSAGE RECYCLER VIEW EMPTY -->
        <TextView
            android:id="@+id/emptyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="pas de message pour le moment"
            android:textAlignment="center"
            android:layout_margin="20dp"/>

        <!-- RECYCLER VIEW -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- IMAGE CHOSEN PREVIEW -->
    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_above="@id/messageContainer"/>

    <!-- ADD MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/messageContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <!-- TEXT MESSAGE EDIT TEXT -->
        <EditText
            android:id="@+id/chatEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            android:textColor="?attr/textAppearanceBody1"
            android:hint="composer votre message"/>

        <!-- ADD MESSAGE BUTTON -->
        <Button
            android:id="@+id/sendButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="envoyer" />

    </LinearLayout>

</RelativeLayout>