<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.restaurant.DetailRestaurantActivity"
    android:id="@+id/detailRestaurantActivity">

    <ImageView
        android:id="@+id/restaurantPicture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="16:12"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/restaurant"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="4"
        android:background="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/restaurantPicture"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67" />

    <TextView
        android:id="@+id/restaurantName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="Le Zinc"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintBottom_toTopOf="@id/address"
        app:layout_constraintEnd_toStartOf="@id/guideline"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="French restaurant - 12 rue du Faubourg Poissonnière"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/restaurantName"
        app:layout_constraintStart_toStartOf="@id/view" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="3"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toEndOf="@id/restaurantName"
        app:layout_constraintTop_toTopOf="@id/restaurantName"
        tools:rating="3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_baseline_check_circle_24"
        app:backgroundTint="@color/white"
        app:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurantPicture"
        app:layout_constraintBottom_toTopOf="@id/view"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:src="@drawable/ic_baseline_call_24"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/orange"
        android:backgroundTint="@color/cardview_shadow_end_color"/>

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_star_rate_24"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/orange"
        android:backgroundTint="@color/cardview_shadow_end_color"/>

    <ImageButton
        android:id="@+id/websiteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:src="@drawable/ic_baseline_webhook_24"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/orange"
        android:backgroundTint="@color/cardview_shadow_end_color"/>

    <TextView
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/callButton"
        app:layout_constraintStart_toStartOf="@id/callButton"
        app:layout_constraintEnd_toEndOf="@id/callButton"/>

    <TextView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/likeButton"
        app:layout_constraintStart_toStartOf="@id/likeButton"
        app:layout_constraintEnd_toEndOf="@id/likeButton" />

    <TextView
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/websiteButton"
        app:layout_constraintStart_toStartOf="@id/websiteButton"
        app:layout_constraintEnd_toEndOf="@id/websiteButton" />

    <View
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/like" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/border"
        tools:itemCount="2"
        tools:listitem="@layout/item_workmates" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/cardview_shadow_end_color"
        android:contentDescription="Back_arrow"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>