<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_lunch"
                    android:icon="@drawable/ic_baseline_restaurant_menu_24"
                    android:title="YOUR LUNCH" />
                <item
                    android:id="@+id/activity_main_drawer_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="SETTINGS" />

                <item
                    android:id="@+id/activity_main_drawer_logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="LOGOUT" />
            </group>
</menu>